# yt-transcribe

./: LICENSE  README.md  pyproject.toml
src/yt_transcribe/: __main__.py  channel.py  cli.py  downloader.py  log.py  models.py  output.py  transcriber.py  whisper.py
tests/: test_output.py
